[project]
name = "clauth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mahmood.Khordoo", email = "Mahmood.Khordoo@riotinto.com" }
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.31",
    "inquirerpy>=0.3.4",
    "typer>=0.17.4",
    "pydantic>=2.0.0",
    "toml>=0.10.2",
]

[project.scripts]
clauth = "clauth.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
